Ein letzter Commit

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <h1>Unsere kleine GIT Demo</h1>
     <p>Und los gehts...</p>
+
+    <p>hier ist unser nächster Commit!</p>
 </body>
 </html>
